promene nakon tri meseca; x86 chapter doradjen

--- a/kernel.bib
+++ b/kernel.bib
@@ -128,7 +128,7 @@
    volume =    {},
    url =       {http://gen.lib.rus.ec/book/index.php?md5=aa2c64b8cee2819de114afdebd113e7a}
 }
-@book{book:658757,
+book{book:658757,
    title =     {Mmurtl V1.0},
    author =    {Richard A. Burgess},
    publisher = {Ip Data Corp},
