Added Makefile & aleksa-toolchain setup.sh

--- a/kernel.tex
+++ b/kernel.tex
@@ -683,8 +683,12 @@ mnogo lakshim za odrzhavanje, ali i mnogo sigurnijim.
 \section{{\eng aleksa-toolchain}}
 \medskip
 
+\begin{minipage}{\textwidth}\eng\lstinputlisting[language=sh,linerange={131-140}]{include/00.build/setup.sh}\srb\end{minipage}
+
 \section{{\eng Makefile}}
 \medskip
+
+\begin{minipage}{\textwidth}\eng\lstinputlisting[language=make,linerange={70-98}]{include/00.build/Makefile}\srb\end{minipage}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
